--- a/src/SFA.Apprenticeships.Infrastructure.Logging/packages.config
+++ b/src/SFA.Apprenticeships.Infrastructure.Logging/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EasyNetQ" version="0.50.2.393" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.1.0" targetFramework="net451" />
   <package id="NLog" version="4.0.1" targetFramework="net451" />
   <package id="RabbitMQ.Client" version="3.5.4" targetFramework="net451" />
