Supporting Azure application settings to override those in settings.config

--- a/src/SFA.DAS.RAA.Api/Web.config
+++ b/src/SFA.DAS.RAA.Api/Web.config
@@ -7,6 +7,8 @@
   <appSettings>
     <add key="ConfigurationPath" value="Configs\settings.config" />
     <add key="APPINSIGHTS_INSTRUMENTATIONKEY" value="" />
+    <add key="ConfigurationStorageConnectionString" value="" />
+    <add key="CacheConnection" value=""/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
