--- a/src/SFA.Apprenticeships.Web.Common/SFA.Apprenticeships.Web.Common.csproj
+++ b/src/SFA.Apprenticeships.Web.Common/SFA.Apprenticeships.Web.Common.csproj
@@ -377,8 +377,8 @@
     <None Include="Content\libs\vendor\nanospell\server\license\key.lic" />
     <None Include="Content\libs\vendor\nanospell\server\license\web.config" />
     <None Include="Content\scss\styles.scss" />
+    <None Include="Content\scss\_address-service-styles.scss" />
     <None Include="Content\scss\_forms.scss" />
-    <None Include="Content\scss\_govuk-custom.scss" />
     <None Include="Content\scss\_link-styles.scss" />
     <None Include="Content\scss\_page-nav.scss" />
     <None Include="Content\scss\_select2-styles.scss" />
