--- a/src/SFA.DAS.RAA.Api.AcceptanceTests/packages.config
+++ b/src/SFA.DAS.RAA.Api.AcceptanceTests/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FluentAssertions" version="4.18.0" targetFramework="net452" />
   <package id="NUnit" version="3.5.0" targetFramework="net452" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net452" />
   <package id="SpecFlow" version="2.1.0" targetFramework="net452" />
   <package id="SpecFlow.NUnit" version="2.1.0" targetFramework="net452" />
 </packages>
