--- a/src/SFA.DAS.RAA.Api.AcceptanceTests/App.config
+++ b/src/SFA.DAS.RAA.Api.AcceptanceTests/App.config
@@ -3,6 +3,9 @@
   <configSections>
     <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" />
   </configSections>
+  <appSettings>
+    <add key="ApiBaseUrl" value="http://local-restapi.findapprenticeship.service.gov.uk/" />
+  </appSettings>
   <specFlow>
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
     <unitTestProvider name="NUnit" />
