--- a/src/SFA.DAS.RAA.Api.AcceptanceTests/SFA.DAS.RAA.Api.AcceptanceTests.csproj
+++ b/src/SFA.DAS.RAA.Api.AcceptanceTests/SFA.DAS.RAA.Api.AcceptanceTests.csproj
@@ -108,16 +108,23 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="Features\RA388.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>RA388.feature</DependentUpon>
+    </Compile>
     <Compile Include="Features\RA551.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>RA551.feature</DependentUpon>
     </Compile>
     <Compile Include="Hooks\ClientHooks.cs" />
+    <Compile Include="Hooks\TestServerHooks.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Steps\GetVacancyDetailsSteps.cs" />
     <Compile Include="Steps\SwaggerUiSteps.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -141,6 +148,10 @@
     </None>
     <None Include="App.Prod.config">
       <DependentUpon>App.config</DependentUpon>
+    </None>
+    <None Include="Features\RA388.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>RA388.feature.cs</LastGenOutput>
     </None>
     <None Include="Features\RA551.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
