RA-388: Attempting to add Owin testing to API

--- a/src/SFA.DAS.RAA.Api.AcceptanceTests/packages.config
+++ b/src/SFA.DAS.RAA.Api.AcceptanceTests/packages.config
@@ -1,7 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FluentAssertions" version="4.18.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Testing" version="3.0.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="NUnit" version="3.5.0" targetFramework="net452" />
+  <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="RestSharp" version="105.2.3" targetFramework="net452" />
   <package id="SlowCheetah" version="2.5.15" targetFramework="net452" />
   <package id="SpecFlow" version="2.1.0" targetFramework="net452" />
