--- a/src/SFA.DAS.RAA.Api.UnitTests/SFA.DAS.RAA.Api.UnitTests.csproj
+++ b/src/SFA.DAS.RAA.Api.UnitTests/SFA.DAS.RAA.Api.UnitTests.csproj
@@ -104,6 +104,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
