--- a/src/SFA.DAS.RAA.Api.AcceptanceTests/packages.config
+++ b/src/SFA.DAS.RAA.Api.AcceptanceTests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoFixture" version="3.50.2" targetFramework="net452" />
   <package id="FluentAssertions" version="4.18.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
