--- a/src/SFA.DAS.RAA.Api/SFA.DAS.RAA.Api.csproj
+++ b/src/SFA.DAS.RAA.Api/SFA.DAS.RAA.Api.csproj
@@ -225,6 +225,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Attributes\ValidateModelStateFilter.cs" />
     <Compile Include="Constants\Roles.cs" />
+    <Compile Include="Controllers\VacancyController.cs" />
     <Compile Include="Controllers\VacancySummaryController.cs" />
     <Compile Include="DependencyResolution\RaaRegistry.cs" />
     <Compile Include="DependencyResolution\IoC.cs" />
