RA-388: Adding API key to test

--- a/src/SFA.DAS.RAA.Api.AcceptanceTests/SFA.DAS.RAA.Api.AcceptanceTests.csproj
+++ b/src/SFA.DAS.RAA.Api.AcceptanceTests/SFA.DAS.RAA.Api.AcceptanceTests.csproj
@@ -151,6 +151,8 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="Steps\AuthorizationSteps.cs" />
+    <Compile Include="Constants\ApiKeys.cs" />
     <Compile Include="Constants\ScenarioContextKeys.cs" />
     <Compile Include="Extensions\FeatureContextExtensions.cs" />
     <Compile Include="Features\RA388.feature.cs">
