--- a/src/SFA.DAS.RAA.Api.AcceptanceTests/packages.config
+++ b/src/SFA.DAS.RAA.Api.AcceptanceTests/packages.config
@@ -17,4 +17,5 @@
   <package id="SlowCheetah" version="2.5.15" targetFramework="net452" />
   <package id="SpecFlow" version="2.1.0" targetFramework="net452" />
   <package id="SpecFlow.NUnit" version="2.1.0" targetFramework="net452" />
+  <package id="structuremap" version="3.1.6.186" targetFramework="net452" />
 </packages>
