RA-388: Working authorization component in acceptance tests

--- a/src/SFA.DAS.RAA.Api.UnitTests/SFA.DAS.RAA.Api.UnitTests.csproj
+++ b/src/SFA.DAS.RAA.Api.UnitTests/SFA.DAS.RAA.Api.UnitTests.csproj
@@ -70,6 +70,7 @@
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Factories\RaaApiUserFactory.cs" />
     <Compile Include="Handlers\ApiKeyHandlerTests.cs" />
     <Compile Include="PilotLightTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
