--- a/src/SFA.DAS.RAA.Api.AcceptanceTests/packages.config
+++ b/src/SFA.DAS.RAA.Api.AcceptanceTests/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoFixture" version="3.50.2" targetFramework="net452" />
+  <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="FluentAssertions" version="4.18.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
@@ -10,6 +12,7 @@
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Testing" version="3.0.1" targetFramework="net452" />
+  <package id="Moq" version="4.5.28" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="NUnit" version="3.5.0" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
