--- a/src/SFA.Apprenticeships.Application.Provider/SFA.Apprenticeships.Application.Provider.csproj
+++ b/src/SFA.Apprenticeships.Application.Provider/SFA.Apprenticeships.Application.Provider.csproj
@@ -78,6 +78,14 @@
       <HintPath>..\packages\CuttingEdge.Conditions.1.2.0.0\lib\NET35\CuttingEdge.Conditions.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="StructureMap, Version=3.1.6.186, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\structuremap.3.1.6.186\lib\net40\StructureMap.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="StructureMap.Net4, Version=3.1.6.186, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\structuremap.3.1.6.186\lib\net40\StructureMap.Net4.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
@@ -85,6 +93,7 @@
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="IoC\ProviderServiceRegistry.cs" />
     <Compile Include="ProviderVacancyAuthorisationService.cs" />
     <Compile Include="ProviderService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
