--- a/src/SFA.DAS.RAA.Api.AcceptanceTests/packages.config
+++ b/src/SFA.DAS.RAA.Api.AcceptanceTests/packages.config
@@ -10,6 +10,7 @@
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Testing" version="3.0.1" targetFramework="net452" />
   <package id="Moq" version="4.5.28" targetFramework="net452" />
