RA-388: Creating mock factory for testing

--- a/src/SFA.DAS.RAA.Api.AcceptanceTests/SFA.DAS.RAA.Api.AcceptanceTests.csproj
+++ b/src/SFA.DAS.RAA.Api.AcceptanceTests/SFA.DAS.RAA.Api.AcceptanceTests.csproj
@@ -177,6 +177,7 @@
   <ItemGroup>
     <Compile Include="DependencyResolution\AcceptanceTestsRegistry.cs" />
     <Compile Include="DependencyResolution\IoC.cs" />
+    <Compile Include="Factories\RaaMockFactory.cs" />
     <Compile Include="Steps\AuthorizationSteps.cs" />
     <Compile Include="Constants\ApiKeys.cs" />
     <Compile Include="Constants\ScenarioContextKeys.cs" />
