RA-388: Implementing get vacancy by id acceptance test

--- a/src/SFA.DAS.RAA.Api.AcceptanceTests/SFA.DAS.RAA.Api.AcceptanceTests.csproj
+++ b/src/SFA.DAS.RAA.Api.AcceptanceTests/SFA.DAS.RAA.Api.AcceptanceTests.csproj
@@ -177,6 +177,9 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="Comparers\DbVacancyComparer.cs" />
+    <Compile Include="Comparers\IMultiEqualityComparer.cs" />
+    <Compile Include="Constants\UriFormats.cs" />
     <Compile Include="DependencyResolution\AcceptanceTestsRegistry.cs" />
     <Compile Include="DependencyResolution\IoC.cs" />
     <Compile Include="Factories\RaaMockFactory.cs" />
