--- a/src/SFA.DAS.RAA.Api/SFA.DAS.RAA.Api.csproj
+++ b/src/SFA.DAS.RAA.Api/SFA.DAS.RAA.Api.csproj
@@ -242,7 +242,7 @@
     </Compile>
     <Compile Include="Handlers\AiExceptionLogger.cs" />
     <Compile Include="Handlers\ApiKeyHandler.cs" />
-    <Compile Include="Models\Vacancy.cs" />
+    <Compile Include="Models\VacancyApiModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ApiKeyAuthenticationService.cs" />
     <Compile Include="Services\IAuthenticationService.cs" />
