RA-388: Returning correct response code when unathorized

--- a/src/SFA.DAS.RAA.Api.AcceptanceTests/SFA.DAS.RAA.Api.AcceptanceTests.csproj
+++ b/src/SFA.DAS.RAA.Api.AcceptanceTests/SFA.DAS.RAA.Api.AcceptanceTests.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Constants\UriFormats.cs" />
     <Compile Include="DependencyResolution\AcceptanceTestsRegistry.cs" />
     <Compile Include="DependencyResolution\IoC.cs" />
+    <Compile Include="Factories\ProviderFactory.cs" />
     <Compile Include="Factories\RaaMockFactory.cs" />
     <Compile Include="Steps\AuthorizationSteps.cs" />
     <Compile Include="Constants\ApiKeys.cs" />
