RA-388: Added initial test for editing wage

--- a/src/SFA.DAS.RAA.Api.AcceptanceTests/SFA.DAS.RAA.Api.AcceptanceTests.csproj
+++ b/src/SFA.DAS.RAA.Api.AcceptanceTests/SFA.DAS.RAA.Api.AcceptanceTests.csproj
@@ -182,6 +182,8 @@
     <Compile Include="Constants\UriFormats.cs" />
     <Compile Include="DependencyResolution\AcceptanceTestsRegistry.cs" />
     <Compile Include="DependencyResolution\IoC.cs" />
+    <Compile Include="Extensions\HttpClientExtensions.cs" />
+    <Compile Include="Steps\EditWageSteps.cs" />
     <Compile Include="Factories\ProviderFactory.cs" />
     <Compile Include="Factories\RaaMockFactory.cs" />
     <Compile Include="Steps\AuthorizationSteps.cs" />
@@ -206,6 +208,7 @@
     </Compile>
     <Compile Include="Steps\GetVacancyDetailsSteps.cs" />
     <Compile Include="Steps\HttpResponseSteps.cs" />
+    <Compile Include="Steps\SetupVacancySteps.cs" />
     <Compile Include="Steps\SwaggerUiSteps.cs" />
     <Compile Include="TestStartup.cs" />
   </ItemGroup>
