RA-388: Adding vacancy comparer to detect empty vacancies

--- a/src/SFA.DAS.RAA.Api.AcceptanceTests/SFA.DAS.RAA.Api.AcceptanceTests.csproj
+++ b/src/SFA.DAS.RAA.Api.AcceptanceTests/SFA.DAS.RAA.Api.AcceptanceTests.csproj
@@ -179,6 +179,7 @@
   <ItemGroup>
     <Compile Include="Comparers\DbVacancyComparer.cs" />
     <Compile Include="Comparers\IMultiEqualityComparer.cs" />
+    <Compile Include="Comparers\VacancyComparer.cs" />
     <Compile Include="Constants\UriFormats.cs" />
     <Compile Include="DependencyResolution\AcceptanceTestsRegistry.cs" />
     <Compile Include="DependencyResolution\IoC.cs" />
